# nn_trainer

./: .coverage  .gitignore  README.md  nn_trainer.code-workspace  pyproject.toml
examples/: toy_classification.py  toy_language_model.py
ftt/: datasets.py  lora.py  lora_strategies.py  model_impact_callbacks.py
ftt/approaches/: adaptive.py  bandits.py  bandits.sh  green_trainer.py  lora.py  run_all.sh  run_all_test.sh  static.py  stochastic.py
ftt/experiments/: mrpc_bandit.sh
ftt/jobs/: runs  sst2.sh
ftt/results/: aggregate.py  aggregate_all.sh
ftt/scripts/: cluster_fuck.sh  enroot_config.sh  nvidia_processes.sh  test.sh  watch_hardware.sh  watch_log.sh
nnt/: experiment.py  trainer.py
nnt/callbacks/: energy_callback.py  flops_budget_callback.py  logging_callback.py  trainer_callback.py  validator_callback.py
nnt/collators/: causal_lm_data_collators.py  data_collators.py
nnt/datasets/: causal_lm_dataset.py  dataset.py  toy_dataset.py
nnt/models/: load_models.py  toy_models.py
nnt/profiling/: multiprocessing_util.py  nvidia_profiler.py  profiler.py  torch_profiler.py
nnt/util/: fast_csv.py  functions.py  monitor.py
nnt/validation_metrics/: classification_metrics.py  generation_metrics.py  validation_metric.py
nnt/validators/: forward_validator.py  generation_validator.py  validator.py
tests/: test_trainer.py
tests/callbacks/: test_energy_callback.py  test_flops_budget_callback.py  test_logging_callback.py  test_trainer_callback.py
tests/collators/: test_causal_lm_collator.py  test_data_collators.py
tests/datasets/: test_dataset.py  (+2 more)
(+8 files in other folders)
